# cfobot

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  OLLAMA_INTEGRATION.md  QUICK_START.md  README.md  README_MCP.md  cfo_mcp_server.py  cfobot.py  coverage.xml  docker-compose.yml  example_usage.py  mcp_server.py  nanobot.yaml  nanobot_ollama.yaml  pyproject.toml  requirements-dev.txt  requirements-mcp.txt  requirements.txt  setup_ollama.py  start_cfo_agent.py  start_cfo_agent_ollama.py  test_cfobot.py  test_mcp_integration.py
.github/workflows/: ci.yml
cfobot/: __init__.py  ai_analyzer.py  cli.py  config.py  constants.py  data_loader.py  emailer.py  processing.py  reporting.py  templates.py  validators.py
tests/: test_config.py  test_data_loader.py
tests/fixtures/: sample_data.py
tests/integration/: test_pipeline.py
tests/unit/: test_emailer.py  test_processing.py  test_validators.py
